<resources>
    <string name="app_name">Spotlight</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_title_ranking">Ranking</string>
    <string name="schedule_time_text_default">Time</string>
    <string name="recycler_display_name_text_default">House Display Name</string>
    <string name="login_enter_email_hint">Email</string>
    <string name="login_enter_password_hint">Password</string>
    <string name="login_main_prompt">Log in</string>
    <string name="attempt_login_button_text">Log In!</string>
    <string name="login_error_default_message">Your sign-in credentials were incorrect. Please try again.</string>
    <string name="login_error_poorly_formed_input">Please enter valid login credentials.</string>
    <string name="create_account_button">Never mind, I don\'t have an\naccount, let\'s make one!</string>
    <string name="forgot_password_button_text">Forgot your password?</string>
    <string name="sign_up_enter_password_hint">Password</string>
    <string name="sign_up_enter_display_name_hint">Name</string>
    <string name="sign_up_enter_email_hint">Email</string>
    <string name="sign_up_enter_confirm_password_hint">Confirm Password</string>
    <string name="attempt_create_account_button_text">Sign Up!</string>
    <string name="sign_up_main_prompt">Make an account</string>
    <string name="login_start_sign_up_button_text">Sign Up!</string>
    <string name="login_start_login_button_text">Log In!</string>
    <string name="sign_up_to_login_prompt_text">Already have an account?</string>
    <string name="sign_up_to_login_button_text">Log In!</string>
    <string name="settings_logout_button_text">Log Out</string>
    <string name="menu_title_settings">Profile</string>
    <string name="sign_up_error_poorly_formed_input">Please enter valid inputs for each field.</string>
    <string name="sign_up_error_default_message">There was an error creating your account. If you believe this was an error, contact support.</string>
    <string name="login_error_email_not_verified">Please verify your email address and log in again.</string>
    <string name="sign_up_and_email_verification_success_confirmation">Your account was successfully created. Please check your email to verify it\'s you, then log in.</string>
    <string name="sign_up_email_verification_failed">Verification email not sent. Retry?</string>
    <string name="login_email_verification_failed">Verification email not sent. Retry?</string>
    <string name="login_email_verification_success_confirmation">Verification email sent. Please check your email to verify it\'s you, then log in.</string>
    <string name="login_prompt_resend_email_verification">Resend verification email?</string>
    <string name="onboarding_title_text">Please select 3 values!</string>
    <string name="onboarding_submit_button_text">Submit</string>
    <string name="schedule_row_date_text_default">Date</string>
    <string name="recycler_row_greek_letters_text_default">Greek Letters</string>
    <string name="no_schedule_message_ahead">You are currently on a previous round. This round\'s schedule will appear after you complete all previous rounds!</string>
    <string name="no_schedule_message_behind">You have already completed this round! Swipe to advance to the current round.</string>
    <string name="no_schedule_message_no_schedules">You currently have no schedules for any rounds. Please be patient and check back later - your schedule will be imported automatically when it’s ready!</string>
    <string name="display_values_title_default_text">My Values</string>
    <string name="display_user_data_title_default_text">My Info</string>
    <string name="display_user_data_display_name_prompt_default_text">Name</string>
    <string name="display_user_data_email_prompt_default_text">Email</string>
    <string name="menu_title_notes">Edit</string>
    <string name="login_main_title_content_description">Purple Spotlight Logo</string>
    <string name="app_main_toolbar_image_content_description">White Spotlight Logo</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="display_user_data_password_prompt_default_text">Password</string>
    <string name="display_user_data_password">FakeWd</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="comments">Comments</string>
    <string name="notes_enter_comments_hint">Enter Comments…</string>
    <string name="notes_submit_button_text">Save</string>
    <string name="sign_up_info_message">Welcome to Spotlight!\n\n- Please sign up using the same email address you used to register for recruitment\n- Your password must be at least 6 characters\n- You will be able to change your name and password at any time\n\nQuestions? Contact contact@spotlight-app.com!</string>
    <string name="content_desc_landing_spotlight_logo">Landing Fragment Spotlight Logo</string>
    <string name="ranking_title_text">Current Ranking</string>
    <string name="ranking_no_data_prompt_text">You currently do not have any houses saved to be ranked. Your houses will appear here once you have saved your comments on the schedule screen.</string>
    <string name="bid_screen_title_text">Congratulations</string>
    <string name="bid_screen_display_name_text_default">House Display Name</string>
    <string name="bid_screen_greek_letters_text_default">House Greek Letters</string>
    <string name="bid_screen_message_title_text">Congrats on your bid!</string>
    <string name="bid_screen_message_text">Please be at the house by 1:00PM for bid day and wear blue jeans and a cute bralette!</string>
    <string name="content_desc_bid_screen_log_out_button">Logout button for bid house screen</string>
</resources>
