<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/homeFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_title_home" />
    <item
        android:id="@id/editRankingFragment"
        android:icon="@drawable/ic_format_list_numbered_black_24dp"
        android:title="@string/menu_title_ranking" />
    <item
        android:id="@id/settingsFragment"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/menu_title_settings" />
    <item
        android:id="@id/editHouseFragment"
        android:icon="@drawable/ic_remove_red_eye_black_24dp"
        android:title="@string/menu_title_edit_house"
        android:visible="false" />

</menu>