<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/schedule_row_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_standard"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/date_and_time_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/schedule_row_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:fontFamily="@font/savoye_let_plain"
            android:text="@string/schedule_row_date_text_default"
            android:textSize="@dimen/large_font_size" />

        <TextView
            android:id="@+id/schedule_row_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:fontFamily="@font/savoye_let_plain"
            android:text="@string/schedule_time_text_default"
            android:textSize="@dimen/large_font_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/schedule_button_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_recycler_row_tinted"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ninety_percent_vertical_guide"
        app:layout_constraintStart_toStartOf="@+id/ten_percent_vertical_guide"
        app:layout_constraintTop_toBottomOf="@+id/date_and_time_wrapper">

        <TextView
            android:id="@+id/schedule_row_display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:fontFamily="@font/savoye_let_plain"
            android:text="@string/recycler_display_name_text_default"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textSize="@dimen/extra_large_font_size" />

        <TextView
            android:id="@+id/schedule_row_greek_letters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"
            android:fontFamily="@font/lucida_grande_regular"
            android:text="@string/recycler_row_greek_letters_text_default"
            android:textColor="@color/colorGreekLetters"
            android:textSize="@dimen/medium_font_size" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ten_percent_vertical_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ninety_percent_vertical_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />

    <TextView
        android:id="@+id/schedule_row_house_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/schedule_row_house_index"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>