<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="example.com.project306.ui.main.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/login_main_title_default_text"
            app:layout_constraintBottom_toTopOf="@+id/login_enter_email_wrapper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/mid_horizontal_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".50" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_enter_email_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mid_horizontal_guide">

            <EditText
                android:id="@+id/login_enter_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_enter_email_hint"
                android:inputType="textEmailAddress" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_enter_password_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_enter_email_wrapper">

            <EditText
                android:id="@+id/login_enter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_enter_password_hint"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/attempt_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attempt_login_button_text"
            app:layout_constraintTop_toBottomOf="@id/login_enter_password_wrapper"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>