<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_start_fragment_container"
    tools:context=".ui.main.LandingFragment">

    <data>

        <variable
            name="viewModel"
            type="example.com.project306.ui.main.LandingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fifty_percent_horizontal_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/thirty_percent_vertical_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/seventy_percent_horizontal_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".7" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/seventy_percent_horizontal_guide"
            app:layout_constraintStart_toStartOf="@+id/thirty_percent_vertical_guide"
            app:layout_constraintTop_toBottomOf="@+id/landing_spotlight_logo">

            <Button
                android:id="@+id/login_start_sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_standard"
                android:background="@drawable/button_default"
                android:padding="12dp"
                android:paddingStart="36dp"
                android:paddingEnd="36dp"
                android:text="@string/login_start_sign_up_button_text"
                android:textAllCaps="false"
                android:textSize="23sp" />

            <Button
                android:id="@+id/login_start_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_standard"
                android:background="@drawable/button_login"
                android:padding="12dp"
                android:paddingStart="36dp"
                android:paddingEnd="36dp"
                android:text="@string/login_start_login_button_text"
                android:textAllCaps="false"
                android:textSize="19sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/landing_spotlight_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_desc_landing_spotlight_logo"
            android:src="@drawable/logo_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>